--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
-.name{
-  font-size: 3.5vw;
+@media screen and (min-width: 801px) {
+  .name {
+    font-size: 60px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .name {
+    font-size: 30px;
+  }
 }
