--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,14 @@
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (min-width: 501px) and (max-width: 800px) {
   .name {
     font-size: 30px;
+  }
+}
+
+@media screen and (max-width:500px) {
+  .name{
+    font-size: 20px;
   }
 }
