--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,76 @@
 @media screen and (min-width: 801px) {
   .name {
     font-size: 60px;
+    z-index: 4;
+  }
+  .photo{
+    width:540px;
+    height:540px;
+    z-index: 4;
+    opacity: 1;
+  }
+  .about{
+    font-size:  60px;
+  }
+  .para{
+    font-size: 20px;
+  }
+  .menu{
+    margin-left: 150px;
+    margin-right: 150px;
+    margin-top: 70px;
+  }
+  .skills{
+    width:250px;
+    height:200px;
   }
 }
 
 @media screen and (min-width: 501px) and (max-width: 800px) {
   .name {
     font-size: 30px;
+    z-index: 4;
+  }
+  .photo{
+    width:350px;
+    height:350px;
+    z-index: 99;
+  }
+  .about{
+    font-size:  30px;
+  }
+  .para{
+    font-size: 15px;
+  }
+  .menu{
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-top: 50px;
+  }
+  .skills{
+    width:100px;
   }
 }
 
 @media screen and (max-width:500px) {
   .name{
     font-size: 20px;
+    z-index: 4;
+  }
+  .photo{
+    width:250px;
+    height:250px;
+    z-index: 4;
+  }
+  .about{
+    font-size:  20px;
+  }
+  .para{
+    font-size: 13.33px;
+  }
+  .menu{
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-top: 20px;
   }
 }
