--- a/src/index.css
+++ b/src/index.css
@@ -52,36 +52,36 @@ header a, a:visited {
 
 @keyframes move-twink-back {
   from {background-position:0 0;}
-  to {background-position:-10000px 5000px;}
+  to {background-position:-20000px 5000px;}
 }
 @-webkit-keyframes move-twink-back {
   from {background-position:0 0;}
-  to {background-position:-10000px 5000px;}
+  to {background-position:-20000px 5000px;}
 }
 @-moz-keyframes move-twink-back {
   from {background-position:0 0;}
-  to {background-position:-10000px 5000px;}
+  to {background-position:-20000px 5000px;}
 }
 @-ms-keyframes move-twink-back {
   from {background-position:0 0;}
-  to {background-position:-10000px 5000px;}
+  to {background-position:-20000px 5000px;}
 }
 
 @keyframes move-clouds-back {
   from {background-position:0 0;}
-  to {background-position:10000px 0;}
+  to {background-position:20000px 0;}
 }
 @-webkit-keyframes move-clouds-back {
   from {background-position:0 0;}
-  to {background-position:10000px 0;}
+  to {background-position:20000px 0;}
 }
 @-moz-keyframes move-clouds-back {
   from {background-position:0 0;}
-  to {background-position:10000px 0;}
+  to {background-position:20000px 0;}
 }
 @-ms-keyframes move-clouds-back {
   from {background-position: 0;}
-  to {background-position:10000px 0;}
+  to {background-position:20000px 0;}
 }
 
 .stars, .twinkling, .clouds {
@@ -90,19 +90,18 @@ top:0;
 left:0;
 right:0;
 bottom:0;
-width:100%;
-height:100%;
-display:block;
+width:auto;
+height:auto;
 color:'white',
 }
 
 .stars {
-background:#000 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
+background:#000 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat repeat center;
 z-index:0;
 }
 
 .twinkling{
-background:transparent url(http://www.script-tutorials.com/demos/360/images/twinkling.png) repeat top center;
+background:transparent url(http://www.script-tutorials.com/demos/360/images/twinkling.png) repeat repeat center;
 z-index:0;
 
 -moz-animation:move-twink-back 200s linear infinite;
@@ -110,4 +109,14 @@ z-index:0;
 -o-animation:move-twink-back 200s linear infinite;
 -webkit-animation:move-twink-back 200s linear infinite;
 animation:move-twink-back 200s linear infinite;
+}
+
+.clouds{
+  background:transparent url(http://www.script-tutorials.com/demos/360/images/clouds3.png) repeat top center;
+  z-index:3;
+-moz-animation:move-clouds-back 200s linear infinite;
+-ms-animation:move-clouds-back 200s linear infinite;
+-o-animation:move-clouds-back 200s linear infinite;
+-webkit-animation:move-clouds-back 200s linear infinite;
+animation:move-clouds-back 200s linear infinite;
 }
