--- a/src/App.css
+++ b/src/App.css
@@ -21,8 +21,15 @@
     margin-top: 70px;
   }
   .skills{
-    width:250px;
-    height:200px;
+    width:500px;
+    height:400px;
+  }
+  .cont2{
+    display: flex;
+    justify-content: space-between;
+  }
+  .each1{
+    float: left;
   }
 }
 
@@ -45,14 +52,22 @@
   .menu{
     margin-left: 50px;
     margin-right: 50px;
-    margin-top: 50px;
+    margin-top: 70px;
+  }
+  .cont2{
+    display: flex;
+    justify-content: space-between;
+  }
+  .each1{
+    float: left;
   }
   .skills{
-    width:100px;
+    width: 200px;
+    height: 170px;
   }
 }
 
-@media screen and (max-width:500px) {
+@media screen and (max-width:600px) {
   .name{
     font-size: 20px;
     z-index: 4;
@@ -71,6 +86,6 @@
   .menu{
     margin-left: 40px;
     margin-right: 40px;
-    margin-top: 20px;
+    margin-top: 70px;
   }
 }
