--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
     font-size: 60px;
     z-index: 4;
   }
+  .social{
+    width:50px;
+    height:50px;
+  }
   .photo{
     width:540px;
     height:540px;
@@ -31,12 +35,19 @@
   .each1{
     float: left;
   }
+  .contact{
+    font-size: 40px;
+  }
 }
 
 @media screen and (min-width: 501px) and (max-width: 800px) {
   .name {
     font-size: 30px;
     z-index: 4;
+  }
+  .social{
+    width:50px;
+    height:50px;
   }
   .photo{
     width:350px;
@@ -87,5 +98,9 @@
     margin-left: 40px;
     margin-right: 40px;
     margin-top: 70px;
+  }
+  .social{
+    width:50px;
+    height:50px;
   }
 }
